--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /RegExDemo1.class
 /Pangrams.class
 /FunnyString.class
+/AlternateChars.class
+/Solution$1.class
+/Solution$Values.class
+/Solution.class
